[metadata]
name = pymemri
version = attr: pymemri.__version__
description = A python client for the memri Pod, and tools to create Plugins
author = Memri
author_email = koen.vanderveen@polis.global
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.memri.io/memri/pymemri
keywords = memri privacy personal data client python
license = MPPL License
classifiers =
	Development Status :: 3 - Alpha
	Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
	requests
	tqdm
	ipdb
	fastprogress
	fastscript
	fastcore==1.3.21
	nbdev==1.1.21
	matplotlib
	jupyter-client==6.1.12
	fastapi[all]==0.78.0
	giturlparse==0.10.0
	pandas
	pillow==8.4.0
	GitPython==3.1.27
	jinja2==3.0.0

[options.extras_require]
dev =
	pytest

[options.packages.find]
where = .
include = pymemri*

[options.entry_points]
console_scripts =
	run_plugin = pymemri.plugin.pluginbase:run_plugin
	simulate_run_plugin_from_frontend = pymemri.plugin.pluginbase:simulate_run_plugin_from_frontend
	store_keys = pymemri.plugin.pluginbase:store_keys
	qr_simulator = pymemri.client_simulator.qr_simulator:run_qr_simulator
	simulate_enter_credentials = pymemri.plugin.authenticators.password:simulate_enter_credentials
	plugin_from_template = pymemri.template.formatter:plugin_from_template
	create_plugin_config = pymemri.template.config:create_plugin_config
